--- a/source/service_udhcpc/Makefile.am
+++ b/source/service_udhcpc/Makefile.am
@@ -20,7 +20,7 @@ bin_PROGRAMS = service_udhcpc
 
 AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util/utils $(CPPFLAGS) -I$(top_srcdir)/source/util/print_uptime -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
 
-AM_LDFLAGS =  -lpthread -lz
+AM_LDFLAGS =  -lpthread -lz -lnanomsg
 
 service_udhcpc_SOURCES = service_udhcpc.c
 
