RDKSI-3281: Framework to handle addition of any new parameter from partners_defaults.json
Reason for change: Framework to handle addition of any new parameter
   from partners_defaults.json to syscfg and PSM.

Features/BugFix:
  - Avoid the redundant delay on utopia bring-up.
  - workaround for timing issues due to utopia initialization delay.
  - Framework to handle addition/removal of any parameter from
  - partners_defaults.json to syscfg and PSM.
  - Populate the value in the PSM based on Partner ID entry in the partners_defaults.json.

RELATED STORY POINT and BUG REPORT:
RDKSI-2496 : [Wan Manager] Modify the Device.PPP.WanProtocolConfiguration data model to handle
the PPPoE/DHCP switching for TCH
RDKSI-2888 : wan_type automatically switching to GPON mode upon multiple
              reboots in WANoE setup.
RDKSI-2887 : Rare issue of PartnerID automatically setting to "comcast"
              after multiple reboot
RDKSI-2898: Handle the PartnerID delta after each image upgrade without need of factory reset.
RDKSI-3433: Code Optimization
RDKSI-3281: Implementation of framework to handle the addition of any new parameter
 directly from partners_defaults.json
RDKSI-2389: [Wan Manager] Handling PSM entry for the DHCP and PPPoE mode for WanManager
RDKSI-2640: [Wan Manager][TCH] Handle PSM entries based on partner id

Test Procedure: Test results are captured in the ticket - RDKSI-3281.
Risks: None
Signed-off-by: Avinash Sharma <avinash.s@tataelxsi.co.in>

--- a/source/scripts/init/src/apply_system_defaults/Makefile.am
+++ b/source/scripts/init/src/apply_system_defaults/Makefile.am
@@ -19,8 +19,9 @@
 bin_PROGRAMS = apply_system_defaults
 DEPENDS = "hal-platform"
 AM_CFLAGS = -I$(top_srcdir)/source -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util -I$(top_srcdir)/../hal/include  -I${PKG_CONFIG_SYSROOT_DIR}$(includedir)/dbus-1.0 -I${PKG_CONFIG_SYSROOT_DIR}$(libdir)/dbus-1.0/include
+AM_CFLAGS +=  $(CPPFLAGS) $(DBUS_CFLAGS)
 hardware_platform = i686-linux-gnu
-AM_LDFLAGS =  -lpthread -lz -lcjson \
+AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS) -lcjson \
                 $(top_builddir)/source/services/lib/libsrvmgr.la \
                 $(top_builddir)/source/sysevent/lib/libsysevent.la \
                 $(top_builddir)/source/syscfg/lib/libsyscfg.la \
@@ -32,4 +33,6 @@ if PLATFORM_HAL_SYNDICATION
 AM_LDFLAGS += "-lhal_platform -lsysevent -lutctx -lutapi -lhal_wifi" 
 endif
 
-apply_system_defaults_SOURCES = apply_system_defaults.c
+AM_LDFLAGS += "-lhal_platform"
+
+apply_system_defaults_SOURCES = msg_bus.c apply_system_defaults.c
