--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ bridge:
     - merge_requests
   variables:
     MERGE_REQUEST_BRANCH: ${CI_MERGE_REQUEST_SOURCE_BRANCH_NAME}
-    BUILD_TARGETS: build-broadcom
+    BUILD_TARGETS: build-broadcom,build-cujo
   trigger:
     project: rdk-factory/software-stack/rdkb
     branch: feature/TCON20-6230-update-all-git-repositories
