RDKSI-5664:RDKDR-303 [Data IPv6] Routing of IPv6 packets from out of scope GUA into WAN NOK

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,5 @@ bridge:
     BUILD_TARGETS: build-broadcom,build-cujo
   trigger:
     project: rdk-factory/software-stack/rdkb
-    branch: feature/TCON20-6230-update-all-git-repositories
+    branch: master
     strategy: depend
