--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,5 @@ bridge:
     BUILD_TARGETS: build-broadcom,build-cujo
   trigger:
     project: rdk-factory/software-stack/rdkb
-    branch: master
+    branch: main
     strategy: depend
