RDKSI-5819 : Addressed the review comment for upstreaming
Reason for change: Add changes under DT_WAN_Manager_Enable flag for RDKBDEV-694. Original ticket: RDKSI-3281.
Test Procedure: Test results are captured in the ticket - RDKSI-5819.
Risks: None

Signed-off-by: Anil Sharma anil.s@tataelxsi.co.in

--- a/source/scripts/init/src/apply_system_defaults/Makefile.am
+++ b/source/scripts/init/src/apply_system_defaults/Makefile.am
@@ -31,9 +31,8 @@ AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS) -lcjson \
 		-ltelemetry_msgsender
 if PLATFORM_HAL_SYNDICATION
 AM_LDFLAGS += "-lhal_platform -lsysevent -lutctx -lutapi -lhal_wifi" 
-endif
-
+else
 AM_LDFLAGS += "-lhal_platform"
-
+endif
 
 apply_system_defaults_SOURCES = msg_bus.c apply_system_defaults.c
