JIRA ID : RDKSI-7365 PRODUCT : FAST5386 CUSTOMER : TDG BRANCH : rdkb-2021q2+dt DESCRIPTION :      Marking voice traffic from LAN SIP clients based on IMS destination IP address TECHNICAL DETAILS (Covering root cause):     1. Integarted c-ares, which fetches the IP address from domain name using NAPTR, SRV, A, AAAA records.     2. On receiving wan-status started event, naptr_qos_rules.sh will reads qos_ip_address and apply iptable rules. 3. On receiving wan-status stopped event, iptable rules are deleted. TESTING DONE : Test Results captured in RDKSI-7365

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -20,3 +20,7 @@ SUBDIRS = ulog syscfg sysevent services utctx utapi firewall firewall_log dhcppr
 if DSLITE_FEATURE_SUPPORT
 SUBDIRS += service_dslite
 endif
+
+if WITH_C_ARES
+SUBDIRS += naptr_parser
+endif
